@@ -133,7 +133,7 @@ class SectionServiceTest {
         // Assert
         assertEquals(1, result.size());
 
-        SectionResponse response = result.get(0);
+        SectionResponse response = result.getFirst();
 
         assertEquals("Intro", response.title());
         assertFalse(response.isLocked());
